# embedded-bootloader

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml  make_release.yml  publish.yml
implementations/samd20-optiboot-custom/: samd20-optiboot-custom.atsln
implementations/samd20-optiboot-custom/samd20-optiboot-custom/: Default.xml  atmel_start.c  atmel_start_pins.h  d20e_cust_hooks.c  driver_init.c  driver_init.h  main.c  samd20-optiboot-custom.componentinfo.xml  samd20-optiboot-custom.cproj
implementations/samd20-optiboot-custom/samd20-optiboot-custom/.atmelstart/: AtmelStart.gpdsc  atmel_start_config.atstart
implementations/samd20-optiboot-custom/samd20-optiboot-custom/Config/: RTE_Components.h  hpl_sercom_config.h  hpl_sysctrl_config.h  peripheral_clk_config.h
implementations/samd20-optiboot-custom/samd20-optiboot-custom/Debug/: Makefile  makedep.mk
implementations/samd20-optiboot-custom/samd20-optiboot-custom/Device_Startup/: samd20e18_flash.ld  startup_samd20.c
implementations/samd20-optiboot-custom/samd20-optiboot-custom/examples/: driver_examples.c  (+1 more)
src/: bl_version.h  optiboot.c  optiboot.h  printf.c  printf.h
src/app/: hex_record_writer.c  hex_record_writer.h
src/user/: user_hooks.c  user_hooks.h  user_settings.h
test/: CMakeLists.txt  README.md  bootloader_tests.cc  example_app_0x6000.hex  flash_sim.c  flash_sim.h  user_imp.c
utilities/format/: format.sh
utilities/scripts/: dl_deps.sh  make_dep_dirs.py  precommit.sh  update_makefile.py
utilities/version/: get_version.ps1  get_version.sh  version.json  version.sh
